--- a/pages/index.css
+++ b/pages/index.css
@@ -2,7 +2,16 @@
   min-width: 1100px;
   max-width: 1600px;
   margin: 0 auto;
-  font-family: "Inter";
+  font-family: Inter;
   font-size: 16px;
   line-height: 20px;
+}
+
+.header {
+}
+
+.content {
+}
+
+.footer {
 }
