--- a/pages/index.css
+++ b/pages/index.css
@@ -1,308 +1,11 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  min-height: 720px;
-  max-height: 800px;
-  background-color: #ffff;
-  background-image: url("/images/background_header.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  position: relative;
-}
-
-.nav {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-}
-
-.logo {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  width: 125px;
-  height: 142px;
-}
-
-.nav__links {
-  display: flex;
-  list-style-type: none;
-  margin-top: 30px;
-  margin-right: 80px;
-  margin-bottom: 0;
-  margin-left: auto;
-  column-gap: 20px;
-  padding: 0;
-}
-
-.nav__link {
-  color: #000;
-  text-decoration: none;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.header__span-accent {
-  font-family: "Noto Serif", Times New Roman, sans-serif;
-  font-style: italic;
-  font-size: 60px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__title {
-  max-width: 729px;
-  margin-top: 202px;
-  margin-left: 80px;
-  margin-bottom: 28px;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 60px;
-  line-height: 72px;
-}
-
-.header__description {
-  max-width: 683px;
-  margin-top: 0;
-  margin-left: 80px;
-  font-family: "Noto Serif", Times New Roman, sans-serif;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.header__image {
-  position: absolute;
-  width: 646px;
-  height: 568px;
-  top: 124px;
-  right: 5px;
-}
-
-.header__footer {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-  bottom: 40px;
-  box-sizing: border-box;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #838383;
-  position: absolute;
-  width: 100%;
-  z-index: 2;
-}
-
-.header__hours {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-left: 80px;
-}
-
-.header__paragraph {
-  margin: 0;
-  line-height: 20px;
-  margin-right: 80px;
-}
-
-.content {
-}
-
-.recipes {
-  background-color: #0a2750;
-  background-image: url(../images/background_recipes.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  color: #fff;
-}
-
-.recipes__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  max-width: 580px;
-  padding-top: 100px;
-  margin: 0 0 0 80px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  margin-top: 24px;
-  margin-left: 80px;
-  font-family: "Noto Serif", "Times New Roman", sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 30px;
-  margin-bottom: 0;
-}
-
-.recipes__videos {
-  display: flex;
-  gap: 40px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 80px;
-  flex-wrap: nowrap;
-  justify-content: center;
-  padding-bottom: 215px;
-}
-
-.recipes__iframe {
-  display: flex;
-  width: 480px;
-  height: 273px;
-  border: 0;
-  column-gap: 40px;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  margin: 24px 0 0 0;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  color: #fff;
-}
-
-.reservation {
-  display: flex;
-  flex-direction: column;
-  background-color: #d9e7ff;
-  background-image: url(../images/background_reservation.svg);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  padding: 100px 0 120px;
-  align-items: center;
-}
-
-.reservation__title {
-  margin: 0 0 80px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.reservation__form {
-  width: 100%;
-  max-width: 385px;
-}
-
-.form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin: 0 auto;
-  max-width: 385px;
-}
-
-.form__fieldset {
-  display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-  border: none;
-}
-
-.form__label {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  position: relative;
-  margin-bottom: 8px;
-  margin-top: 0;
-  padding: 0;
-}
-
-.form__input {
-  box-sizing: border-box;
-  box-shadow: none;
-  border-radius: 4px;
-  height: 60px;
-  margin-bottom: 32px;
-  padding-left: 10px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  border: solid 1px #838383;
-  max-width: 385px;
-  width: 100%;
-  text-align: left;
-}
-
-.form__input::placeholder {
-  font-size: 16px;
-  color: #828383;
-}
-
-.form__button {
-  cursor: pointer;
-  box-sizing: border-box;
-  box-shadow: none;
-  border-radius: 4px;
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  height: 60px;
-  background-color: #2f80ed;
-  color: #fff;
-  border: none;
-  transition: opacity 3s ease 0s;
-}
-
-.form__button:hover {
-  opacity: 70%;
-}
-
-.form__checkbox {
-  border-radius: 2px;
-  background-color: #2f80ed;
-  background-image: url(../images/check.svg);
-  height: 20px;
-  width: 20px;
-  margin-right: 12px;
-}
-
-.form__label_checkbox_checked {
-  margin-top: 32px;
-  display: flex;
-  justify-content: center;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.footer {
-}
+@import url(../blocks/page.css);
+@import url(../vendor/normalize.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/card.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
