--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -19,7 +19,6 @@
 
 .footer__social-column {
   margin-left: auto;
-  text-align: right;
 }
 
 .footer__social-heading {
@@ -36,13 +35,9 @@
   display: flex;
   flex-direction: column;
   row-gap: 16px;
+  padding: 0;
   margin: 0;
   list-style-type: none;
-}
-
-.footer__list-item {
-  display: flex;
-  justify-content: end;
 }
 
 .footer__social-link {
@@ -55,6 +50,7 @@
   text-decoration: none;
   transition: color 0.3s linear;
   display: flex;
+  align-items: center;
   justify-content: end;
 }
 
