--- a/blocks/form.css
+++ b/blocks/form.css
@@ -25,7 +25,6 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
-  position: relative;
   margin-bottom: 8px;
   margin-top: 0;
   padding: 0;
@@ -78,18 +77,15 @@
 .form__checkbox {
   border-radius: 2px;
   background-color: #2f80ed;
-  background-image: url(../images/check.svg);
   height: 20px;
   width: 20px;
   margin-right: 12px;
 }
 
 .form__label_checkbox_checked {
-  margin-top: 32px;
   display: flex;
   justify-content: center;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+  align-items: center;
+  margin-top: 32px;
+  margin-bottom: 0;
 }
