--- a/blocks/header.css
+++ b/blocks/header.css
@@ -5,23 +5,15 @@
   min-height: 720px;
   max-height: 800px;
   background-color: #ffff;
-  background-image: url("/images/background_header.svg");
+  background-image: url(../images/background_header.svg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
   position: relative;
 }
 
-.header__logo {
-  position: absolute;
-  top: 30px;
-  left: 30px;
-  width: 125px;
-  height: 142px;
-  z-index: 1;
-}
-
 .header__span-accent {
+  display: block;
   font-family: "Noto Serif", Times New Roman, sans-serif;
   font-style: italic;
   font-size: 60px;
@@ -30,6 +22,8 @@
 }
 
 .header__title {
+  display: flex;
+  flex-wrap: wrap;
   max-width: 729px;
   margin-top: 202px;
   margin-left: 80px;
@@ -43,6 +37,7 @@
 .header__description {
   max-width: 683px;
   margin-top: 0;
+  margin-bottom: 0;
   margin-left: 80px;
   font-family: "Noto Serif", Times New Roman, sans-serif;
   font-size: 20px;
@@ -62,27 +57,21 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  bottom: 40px;
   box-sizing: border-box;
   font-family: "Inter", Arial, sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #838383;
-  position: absolute;
+  margin-top: auto;
+  margin-bottom: 40px;
   width: 100%;
   z-index: 2;
-}
-
-.header__hours {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  margin-left: 80px;
+  padding-left: 80px;
+  padding-right: 80px;
 }
 
 .header__paragraph {
   margin: 0;
   line-height: 20px;
-  margin-right: 80px;
 }
