--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,7 +1,6 @@
 .menu {
   width: 100%;
   display: flex;
-  position: relative;
   flex-direction: column;
   background-color: #ffffff;
   background-image: url(../images/background_menu.svg);
@@ -17,7 +16,7 @@
   padding-top: 100px;
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
-  font-weight: 500px;
+  font-weight: 500;
   font-size: 44px;
   line-height: 52px;
 }
